fix: title underline overflow

--- a/src/app/components/title/title.component.scss
+++ b/src/app/components/title/title.component.scss
@@ -1,5 +1,10 @@
 @import "../../../styles/palette.scss";
 
+div {
+  display: flex;
+  justify-content: center;
+}
+
 h1 {
   text-transform: uppercase;
   text-align: center;
@@ -7,8 +12,6 @@ h1 {
   display: inline-block;
   margin: 2rem 0;
   color: #1e272e;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 h1:after {
@@ -18,5 +21,13 @@ h1:after {
   left: -10%;
   background-color: $red;
   height: 5px;
+  border-radius: 5px;
   width: 120%;
+}
+
+@media only screen and (max-width: 480px) {
+  h1::after {
+    left: 0;
+    width: 100%;
+  }
 }
