--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,4 @@ img {
 }
 
 @media only screen and (max-width: 920px) {
-  :root {
-    font-size: 14px;
-  }
 }
